--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "cmdk": "^1.0.0",
     "geist": "^1.2.1",
     "lucide-react": "^0.365.0",
+    "moment": "^2.30.1",
+    "mxcn": "^2.0.0",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
