--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "avvvatars-react": "^0.4.2",
     "cmdk": "^1.0.0",
     "geist": "^1.2.1",
     "lucide-react": "^0.365.0",
