--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.2.1",
+    "@codemirror/lang-html": "^6.4.8",
+    "@codemirror/lang-javascript": "^6.2.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@uiw/react-codemirror": "^4.21.25",
     "autoprefixer": "10.4.17",
     "avvvatars-react": "^0.4.2",
     "cmdk": "^1.0.0",
+    "codemirror": "^6.0.1",
     "geist": "^1.2.1",
     "lucide-react": "^0.365.0",
     "moment": "^2.30.1",
@@ -23,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.1",
+    "thememirror": "^2.0.1",
     "typescript": "5.3.3"
   },
   "devDependencies": {
