--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sonner": "^1.4.41",
     "tailwindcss": "3.4.1",
     "thememirror": "^2.0.1",
     "typescript": "5.3.3"
